# Warehouse_Automation

./: .gitignore  CMakeLists.txt  README.md  constants.h  main.cpp  main_script.txt  test.cpp
competitors/include/: a_star.h  astar.h  base_mapf.h  base_structures.h  basic_graph.h  bfs_by_dimensions.h  ca_star.h  cbs.h  cbs_node.h  map.h  node.h  path_finder.h  path_from_file_reader.h  pbs.h  single_agent_solver.h
competitors/src/: a_star.cpp  basic_graph.cpp  bfs_by_dimensions.cpp  ca_star.cpp  cbs.cpp  map.cpp  path_from_file_reader.cpp  pbs.cpp  single_agent_solver.cpp
environment/include/: game.h  robot.h  script_parser.h  sfml_show.h  task.h
environment/src/: game.cpp  script_parser.cpp
graphics/: result_parsing.ipynb  task_parser.py
graphics/test_data/: \tasks.txt  config.txt  solver.csv
tests/tests_scripts/: map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map7.txt  test1.txt  test10.txt  test11.txt  test3.txt  test4.txt  test5.txt  test7.txt  test8.txt  test9.txt
